# cmake_practice

./: CMakeLists.txt  README.md
Unity/: CMakeLists.txt  unity.c
src/: CMakeLists.txt  main.c
src/algorithm/: CMakeLists.txt  algorithm.c  algorithm.h
src/common/: CMakeLists.txt  files_manage.c  files_manage.h
src/tools/: CMakeLists.txt  tools.c  tools.h  tools_test.c
